add more link text

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Run Buddy</title>
+        What We Do What You Do Your Trainers Reach Out
     </head>
 
     <body>
