completed the header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Run Buddy</title>
+  
+  <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
@@ -12,8 +14,8 @@
     <h1>
       <a href="/">RUN BUDDY</a>
     </h1>
-    <nav></nav>
 
+    <nav>
     <!-- unordered list element -->
     <ul>
       <!-- Liste item element -->
@@ -31,6 +33,7 @@
         <a href="#reach-out">Reach Out</a>
       </li>
     </ul>
+  </nav>
   </header>
 
   <!-- hero/jumbotron -->
