--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Run Buddy</title>
-  
-  <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
@@ -14,11 +13,10 @@
     <h1>
       <a href="/">RUN BUDDY</a>
     </h1>
-
     <nav>
       <!-- unordered list element -->
       <ul>
-        <!-- Liste item element -->
+        <!-- List item element -->
         <li>
           <!-- Anchor element -->
           <a href="#what-we-do">What We Do</a>
@@ -85,7 +83,6 @@
     <h2 class="section-title secondary-border">What You Do</h2>
   
     <div>
-      <!-- insert this img element -->
       <img src="./assets/images/step-1.svg" alt="" />
       <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
       <p>You're already here, so why not?</p>
@@ -111,8 +108,46 @@
   </section>
 
   <!-- "meet the trainers" section -->
-  <section>
-    <h2>Meet The Trainers</h2>
+  <section id="your-trainers" class="trainers">
+    <h2 class="section-title primary-border">Meet The Trainers</h2>
+
+    <!-- first trainer bio -->
+    <article class="trainer text-left">
+      <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+      <div class="trainer-bio text-left">
+        <h3>Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, possimus incidunt cupiditate unde eum beatae, quisquam molestias at tenetur ex id sunt fugit, laborum soluta dolorem pariatur illo quo doloribus?
+        </p>
+      </div>
+    </article>
+
+    <!-- second trainer bio -->
+    <!-- here we put the paragraph first and image second so that it floats correctly, since we want the image on the right and para on the left so we won't have to change the CSS code-->
+    <article class="trainer text-left">
+      <div class="trainer-bio text-right">
+        <h3>Joanna Gill</h3>
+        <h4>Endurance</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, possimus incidunt cupiditate unde eum beatae, quisquam molestias at tenetur ex id sunt fugit, laborum soluta dolorem pariatur illo quo doloribus?
+        </p>
+      </div>
+      <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+    </article>
+
+    <!-- third trainer bio -->
+    <article class="trainer">
+      <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+      <div class="trainer-bio text-left">
+        <h3>Harry "the Headband" Smith</h3>
+        <h4>Strength</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+    </article>
+
   </section>
 
   <!-- "reach out" section -->
@@ -133,4 +168,3 @@
 </body>
 
 </html>
-
