--- a/index.html
+++ b/index.html
@@ -227,7 +227,8 @@
       <h2>❤️ Made with love by Run Buddy.</h2>
 
       <div>
-        <a href="#">Read Our Privacy Policy</a><br />
+        <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
+        <!-- this links it to the privacy-policy page! -->
         &copy; 2019 Run Buddy, Inc.
         <!-- QUESTION!!!! WHY DOESN'T THIS LINE ^^ NEED A <p> OR SOMETHING TO SHOW ON WEBSITE-->
       </div>
