deleted old folder

--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3444.827375864724!2d-97.71034088361974!3d30.298975581790383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8644b5f8186929e1%3A0xf5448e69f6110219!2s4600%20Mueller%20Blvd%2C%20Austin%2C%20TX%2078723!5e0!3m2!1sen!2sus!4v1639868263040!5m2!1sen!2sus"
           style="border: 0"
           allowfullscreen=""
-          loading="lazy">
+          loading="lazy"
+        >
         </iframe>
 
         <div class="address-info">
