--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 
     <!-- hero/jumbotron -->
     <section class="hero">
+      <div class="hero-cta">
+        <h2>Start Building Habits.</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolore fugit similique velit in. Non iure possimus, ullam accusantium quo qui aut nulla dignissimos sapiente vero, atque sequi dolore suscipit.
+        </p>
+      </div>
       <div class="hero-form">
         <h3>Get Started Today</h3>
         <p>
@@ -236,3 +242,126 @@
     </footer>
   </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en-us">
+
+<head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Horiseon</title> 
+    <!-- edit: changed title from "website" to "Horiseon" -->
+    <!-- this title affects the tab title of the website -->
+</head>
+
+<body>
+    <!-- navigation -->
+    <header> 
+    <!-- edit: changed <div class="header"> to <header> -->
+        <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- this displays the name of the company on the header -->
+        <nav> 
+        <!-- edit: changed <div> to <nav> -->
+        <!-- this displays the navigation lists that are linked to each article in the main section -->
+            <ul>
+                <li>
+                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                </li>
+                <li>
+                    <a href="#online-reputation-management">Online Reputation Management</a>
+                </li>
+                <li>
+                    <a href="#social-media-marketing">Social Media Marketing</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- hero -->
+    <section class="hero"></section> 
+    <!-- edit: changed <div> to <section> --> 
+    <!-- section of the website that holds the hero image -->
+
+    <!-- content section -->
+    <section class="content"> 
+    <!-- edit: changed <div> to <section> --> 
+    <!-- the class="content" is referenced in CSS to style the overall container holding the articles -->
+        <!-- search engine optimization -->
+        <article id="search-engine-optimization"> 
+        <!-- edit: input id="search-engine-opmtimization" for nav link function; <div> to <article>; deleted class="search-engine optimization" -->
+            <img src="./assets/images/search-engine-optimization.jpg" alt="notebook page displaying factors that affect search engine optimization" class="float-left" /> 
+            <!-- edit: added alt=" " attribute -->
+            <h2>Search Engine Optimization</h2>
+            <p>
+                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+            </p>
+        </article>
+        <!-- online reputation management -->
+        <article id="online-reputation-management"> 
+        <!-- edit: changed <div> to <article>; deleted class="online-reputation-management" -->
+            <img src="./assets/images/online-reputation-management.jpg" alt="laptop with presentation on screen showing slide displaying improving reputation"  class="float-right" /> 
+            <!-- edit: added alt=" " attribute -->
+            <h2>Online Reputation Management</h2>
+            <p>
+                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+            </p>
+        </article>
+        <!-- social media marketing -->
+        <article id="social-media-marketing"> 
+        <!-- edit: changed <div> to <article>; deleted class="social-media-marketing" -->
+            <img src="./assets/images/social-media-marketing.jpg" alt="image displaying icons that represent factors that affect social media marketing" class="float-left" /> 
+            <!-- edit: added alt=" " attribute -->
+            <h2>Social Media Marketing</h2>
+            <p>
+                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+            </p>
+        </article>
+    </section>
+
+    <!-- benefits section -->
+    <section class="benefits"> 
+    <!-- edit: changed <div> to <section> -->
+    <!-- the class="benefits" is referenced in CSS to style the overall container of this section -->
+        <!-- lead generation -->
+        <div> 
+        <!-- edit: deleted class="benefits-lead" -->
+            <h3>Lead Generation</h3>
+            <img src="./assets/images/lead-generation.png" alt="" /> 
+            <!-- edit: added alt="" to icon image -->
+            <p>
+                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+            </p>
+        </div>
+        <!-- brand awareness -->
+        <div> 
+        <!-- edit: deleted class="benefits-brand" -->
+            <h3>Brand Awareness</h3>
+            <img src="./assets/images/brand-awareness.png" alt="" />
+            <!-- edit: added alt="" to icon image -->
+            <p>
+                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+            </p>
+        </div>
+        <!-- cost management -->
+        <div> 
+        <!-- edit: deleted class="benefits-cost" -->
+            <h3>Cost Management</h3>
+            <img src="./assets/images/cost-management.png" alt="" />
+            <!-- edit: added alt="" to icon image and replaced </img> with /> -->
+            <p>
+                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+            </p>
+        </div>
+    </section>
+
+    <!-- footer -->
+    <footer>
+    <!-- edit: changed <div> to <footer> -->
+        <h2>Made with ❤️️ by Horiseon</h2>
+        &copy; 2019 Horiseon Social Solution Services, Inc. 
+        <!-- edit: removed <p> -->
+    </footer>
+</body>
+
+</html>
+
