--- a/index.html
+++ b/index.html
@@ -122,33 +122,57 @@
         </h2>
       </div>
 
-      <div>
-        <img src="./assets/images/step-1.svg" alt="" />
-        <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
-        <p>You're already here, so why not?</p>
-      </div>
+      <div class="step"> <!-- parent 1 -->
+        <h3>Step 1.</h3> <!-- child 1a -->
+        <div class="step-info"> <!-- child 1b and parent 2 -->
+          <div class="step-img"> <!-- child 2a -->
+            <img src="./assets/images/step-1.svg" alt="" />
+          </div>
+          <div class="step-text"> <!-- child 2b -->
+            <h4>Fill Out the Form Above.</h4>
+            <p>You're already here, so why not?</p>
+          </div>
+        </div>
+      </div>     
 
-      <div>
-        <img src="./assets/images/step-2.svg" alt="" />
-        <h3>Step 2: <span>Meet with One of Our Trainers.</span></h3>
-        <p>Are you here to build muscle, lose weight, or just feel good?</p>
-      </div>
+      <div class="step">
+        <h3>Step 2.</h3> <!-- child 1a -->
+        <div class="step-info"> <!-- child 1b and parent 2 -->
+          <div class="step-img"> <!-- child 2a -->
+            <img src="./assets/images/step-2.svg" alt="" />
+          </div>
+          <div class="step-text"> <!-- child 2b -->
+            <h4>Meet with One of Our Trainers.</h4>
+            <p>Are you here to build muscle, lose weight, or just feel good?</p>
+          </div>
+        </div>
+      </div> 
 
-      <div>
-        <img src="./assets/images/step-3.svg" alt="" />
-        <h3>Step 3: <span>Get Running.</span></h3>
-        <p>
-          Hit the ground running (literally) once your trainer lays out your
-          plan.
-        </p>
-      </div>
+      <div class="step">
+        <h3>Step 3.</h3> <!-- child 1a -->
+        <div class="step-info"> <!-- child 1b and parent 2 -->
+          <div class="step-img"> <!-- child 2a -->
+            <img src="./assets/images/step-3.svg" alt="" />
+          </div>
+          <div class="step-text"> <!-- child 2b -->
+            <h4>Get Running.</h4>
+            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+          </div>
+        </div>
+      </div> 
 
-      <div>
-        <img src="./assets/images/step-4.svg" alt="" />
-        <h3>Step 4: <span>See Results.</span></h3>
-        <p>Bi-weekly checkins with your trainer will keep you focused</p>
-      </div>
-    </section>
+      <div class="step">
+        <h3>Step 4.</h3> <!-- child 1a -->
+        <div class="step-info"> <!-- child 1b and parent 2 -->
+          <div class="step-img"> <!-- child 2a -->
+            <img src="./assets/images/step-4.svg" alt="" />
+          </div>
+          <div class="step-text"> <!-- child 2b -->
+            <h4>See Results.</h4>
+            <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+          </div>
+        </div>
+      </div> 
 
     <!-- "meet the trainers" section -->
     <section id="your-trainers" class="trainers">
