--- a/index.html
+++ b/index.html
@@ -173,69 +173,61 @@
           </div>
         </div>
       </div> 
+    </section>
 
     <!-- "meet the trainers" section -->
-    <section id="your-trainers" class="trainers">
+    <section id="your-trainers"> <!-- parent 1 -->
       <div class="flex-row">
         <h2 class="section-title primary-border">
           Meet The Trainers
         </h2>
       </div>
 
-      <!-- first trainer bio -->
-      <article class="trainer text-left">
-        <img
-          src="./assets/images/trainer-1.jpg"
-          alt="Arron Stephens in his workout clothes, ready to pump iron"
-        />
-        <div class="trainer-bio text-left">
-          <h3>Arron Stephens</h3>
-          <h4>Speed / Strength</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
-            possimus incidunt cupiditate unde eum beatae, quisquam molestias at
-            tenetur ex id sunt fugit, laborum soluta dolorem pariatur illo quo
-            doloribus?
-          </p>
-        </div>
-      </article>
-
-      <!-- second trainer bio -->
-      <!-- here we put the paragraph first and image second so that it floats correctly, since we want the image on the right and para on the left so we won't have to change the CSS code-->
-      <article class="trainer text-left">
-        <div class="trainer-bio text-right">
-          <h3>Joanna Gill</h3>
-          <h4>Endurance</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
-            possimus incidunt cupiditate unde eum beatae, quisquam molestias at
-            tenetur ex id sunt fugit, laborum soluta dolorem pariatur illo quo
-            doloribus?
-          </p>
-        </div>
-        <img
-          src="./assets/images/trainer-2.jpg"
-          alt="Joanna Gill cooling off after a workout"
-        />
-      </article>
-
-      <!-- third trainer bio -->
-      <article class="trainer">
-        <img
-          src="./assets/images/trainer-3.jpg"
-          alt="Harry Smith wearing a headband and lifting comically small pink weights"
-        />
-        <div class="trainer-bio text-left">
-          <h3>Harry "the Headband" Smith</h3>
-          <h4>Strength</h4>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
-            neque animi quo cupiditate commodi saepe culpa sed itaque velit
-            maiores optio dolorem excepturi aperiam dolores, voluptatibus
-            suscipit amet quis repellat!
-          </p>
-        </div>
-      </article>
+      <div class="trainers"> <!-- child 1 -->
+        <!-- first trainer bio -->
+        <article class="trainer">
+          <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Arron Stephens</h3>
+            <h4 class="trainer-role">Speed / Strength</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+              possimus incidunt cupiditate unde eum beatae, quisquam molestias at
+              tenetur ex id sunt fugit, laborum soluta dolorem pariatur illo quo
+              doloribus?
+            </p>
+          </div>
+        </article>
+        <!-- second trainer bio -->
+        <!-- here we put the paragraph first and image second so that it floats correctly, since we want the image on the right and para on the left so we won't have to change the CSS code-->
+        <article class="trainer">
+          <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Joanna Gill</h3>
+            <h4 class="trainer-role">Endurance</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+              possimus incidunt cupiditate unde eum beatae, quisquam molestias at
+              tenetur ex id sunt fugit, laborum soluta dolorem pariatur illo quo
+              doloribus?
+            </p>
+          </div>
+        </article>
+        <!-- third trainer bio -->
+        <article class="trainer">
+          <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+            <h4 class="trainer-role">Strength</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
+              neque animi quo cupiditate commodi saepe culpa sed itaque velit
+              maiores optio dolorem excepturi aperiam dolores, voluptatibus
+              suscipit amet quis repellat!
+            </p>
+          </div>
+        </article>
+      </div>
     </section>
 
     <!-- "reach out" section -->
