--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- makes webpage work on mobile devices but isn't fully responsive, have to fix CSS -->
     <title>Privacy Policy - Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
 
