added additional aesthetic styles with CSS through 2.4

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
           What We Do
         </h2>
       </div>
+      
       <div class="flex-row"> <!-- added div to create a container for each h2 & p-->
         <p>
           butcher selfies chambray shabby chic gentrify readymade yr Echo Park
@@ -115,14 +116,15 @@
     </section>
 
     <!-- "what you do" section -->
-    <section id="what-you-do" class="steps">
-      <div class="flex-row">
+    <section id="what-you-do" class="steps"> <!-- parent -->
+    
+      <div class="flex-row"> <!-- child 1 -->
         <h2 class="section-title secondary-border">
           What You Do
         </h2>
       </div>
 
-      <div class="step"> <!-- parent 1 -->
+      <div class="step"> <!-- child 2; parent 1 -->
         <h3>Step 1.</h3> <!-- child 1a -->
         <div class="step-info"> <!-- child 1b and parent 2 -->
           <div class="step-img"> <!-- child 2a -->
@@ -135,7 +137,7 @@
         </div>
       </div>     
 
-      <div class="step">
+      <div class="step"> <!-- child 3; parent 1 -->
         <h3>Step 2.</h3> <!-- child 1a -->
         <div class="step-info"> <!-- child 1b and parent 2 -->
           <div class="step-img"> <!-- child 2a -->
@@ -148,7 +150,7 @@
         </div>
       </div> 
 
-      <div class="step">
+      <div class="step"> <!-- child 3; parent 1 -->
         <h3>Step 3.</h3> <!-- child 1a -->
         <div class="step-info"> <!-- child 1b and parent 2 -->
           <div class="step-img"> <!-- child 2a -->
@@ -161,7 +163,7 @@
         </div>
       </div> 
 
-      <div class="step">
+      <div class="step"> <!-- child 4 (last); parent 1 -->
         <h3>Step 4.</h3> <!-- child 1a -->
         <div class="step-info"> <!-- child 1b and parent 2 -->
           <div class="step-img"> <!-- child 2a -->
