--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
 
     <!-- hero/jumbotron -->
     <section class="hero">
+
       <div class="hero-cta">
         <h2>Start Building Habits.</h2>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit dolore fugit similique velit in. Non iure possimus, ullam accusantium quo qui aut nulla dignissimos sapiente vero, atque sequi dolore suscipit.
         </p>
       </div>
+
       <div class="hero-form">
         <h3>Get Started Today</h3>
         <p>
@@ -78,16 +80,20 @@
 
           <p>
             Have you worked out with a trainer before?
-            <input type="radio" name="trainer-confirm" id="trainer-yes" />
-            <label for="trainer-yes">Yes</label>
-            <input type="radio" name="trainer-confirm" id="trainer-no" />
-            <label for="trainer-no">No</label>
+            <span class="radio-wrapper">
+              <input type="radio" name="trainer-confirm" id="trainer-yes" />
+              <label for="trainer-yes">Yes</label>
+            </span>
+            <span class="radio-wrapper">
+              <input type="radio" name="trainer-confirm" id="trainer-no" />
+              <label for="trainer-no">No</label>
+            </span>
           </p>
           <p>
-            <label for="checkbox">
-              I acknowledge that I am at least 18 years of age.
-            </label>
-            <input type="checkbox" name="age-confirm" id="checkbox" />
+            <span class="checkbox-wrapper">
+              <input type="checkbox" name="age-confirm" id="checkbox" />
+              <label for="checkbox">I acknowledge that I am at least 18 years of age.</label>
+            </span>
           </p>
           <button type="submit">Get running!</button>
         </form>
